add server report player level api
